# trace-capture-lib

./: .gitignore  CMakeLists.txt  LICENSE  readme.md  test_ci.sh
.devcontainer/: Dockerfile
.github/workflows/: docker-image.yml
cmake/: auto_version.cmake  trace_utility.cmake  user_config.cmake
docs/: mkdocs.yml
docs/docs/: index.md  quick_start_guide.md
docs/docs/internal/: host_to_device_interface.md
docs/images/: host_protocol_seq_flow.dot
docs/reqs/host/: HOST002.yml
docs/reqs/module/: MOD001.yml  MOD002.yml  MOD005.yml  MOD006.yml  MOD007.yml  MOD010.yml
docs/reqs/usr/: USR001.yml  USR002.yml  USR003.yml
example/: CMakeLists.txt  example.yml  main.cpp
example/post_analysis/: analysis_sink.py  post_analysis.py
example/sample_x86/: CMakeLists.txt  example.yml
example/sample_x86/inc/: examplePlatform.hpp
example/sample_x86/src/: examplePlatform.cpp
example/stm32/: CMakeLists.txt  linker.ld  toolchain.cmake
example/stm32/inc/: task.hpp  taskPool.hpp
example/stm32/src/: main.cpp
include/: config.hpp.in  trace.hpp  traceCollector.hpp
include/internal/: tracePacket.hpp
lib/: CMakeLists.txt  traceCollector.cpp  tracePacket.cpp
tests/: CMakeLists.txt  basic.cpp  packetOp.cpp  traceCollectorTest.cpp
tools/: trace_generate.py
